# ref-2021-analysis

./: .gitignore  LICENSE  README.md  Snakefile  pyproject.toml  report.html  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-app.yml
data/processed/environment_statements/: EnvironmentStatementsInstitutionLevel.parquet
data/processed/sheets/: ResearchDoctoralDegreesAwarded.parquet  ResearchDoctoralDegreesAwarded_preprocessed.parquet  ResearchGroups.parquet  ResearchGroups_ppreprocessed.csv  ResearchGroups_preprocessed.parquet  ResearchIncome.parquet  ResearchIncomeInKind.parquet  ResearchIncomeInKind_preprocessed.parquet  ResearchIncome_preprocessed.parquet  Results_preprocessed.parquet
data/raw/: REF-2021-Results-All-2022-05-06.xlsx
logs/: extract_outputs_log.txt  extract_sheets_log.txt  preprocess_data_log.txt  setup_log.txt
notebooks/: PREPROCESS_data.ipynb  STUDY_data.ipynb  export_notebooks.sh  preprocess.md  study.md
src/: Home.py  codebook.py  extract_data.py  extract_data.sh  extract_sheet.py  extract_sheets.py  logs.py  prepare_envstatements.py  preprocess.py  preprocess_data.py  preprocess_sheet.py  process.py  read_write.py  setup.py  utils.py  visualisations.py
src/REF2021_processing/: codebook.py  prepare_envstatements.py  preprocess.py  preprocess_sheet.py  process_envstatements.py  process_submissions_and_results.py  read_write.py  utils.py
src/pages/: 1_Outputs_submissions.py
src/wordcloud/: requirements.txt  wordcloud_columns.py
tests/: folders_and_files_test.py  read_write_test.py  submissions_results_data_test.py
(+2034 files in other folders)
